# Evaluation3_Back

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
service/: chunkings.py  db_setup.py  dependency.py  file_service.py  llm_service.py  models.py  parsers.py
